# cmake_study

./: CMakeLists.txt  Makefile  hello.c
func_value/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  tags
func_value/include/: print.h  swap.h
func_value/src/: print.c  run.c  swap.c
hello/: CMakeCache.txt  README.md  cmake_install.cmake
uselib/g_test/: CMakeLists.txt
uselib/g_test/include/: g_test.h
uselib/g_test/libtest/: g_test.c
uselib/use_lib/: CMakeLists.txt  CMakeLists.txt.bak  usr_lib.c
